--- a/cse190_listApp/res/layout/first_launch.xml
+++ b/cse190_listApp/res/layout/first_launch.xml
@@ -3,13 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" 
-    android:layout_marginLeft="15dp"
-    android:layout_marginRight="15dp">
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal" 
+        android:layout_marginLeft="15dp"
+    	android:layout_marginRight="15dp">
 
         <ImageView
             android:id="@+id/imageView1"
@@ -25,67 +26,68 @@
             android:textSize="30sp"
             android:text="Find My Craving" />
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/username_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-    	android:layout_marginRight="50dp"
-    	android:layout_marginTop="30dp"
-        android:text="Username:" />
-
-    <EditText
-        android:id="@+id/username_edit"
+    
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="wrap_content" 
         android:layout_marginLeft="50dp"
-    	android:layout_marginRight="50dp"
-        android:ems="10" />
+	    android:layout_marginRight="50dp">
         
-    <TextView
-        android:id="@+id/password_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-    	android:layout_marginRight="50dp"
-    	android:layout_marginTop="20dp"
-        android:text="Password:" />
-
-    <EditText
-        android:id="@+id/password_edit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-    	android:layout_marginRight="50dp"
-    	android:inputType="textPassword"
-        android:ems="10" />
-
-    <Button
-        android:id="@+id/login_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-    	android:layout_marginRight="50dp"
-    	android:layout_marginTop="10dp"
-        android:text="Login" />
-
-    <Button
-        android:id="@+id/sign_up_button"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-    	android:layout_marginRight="50dp"
-    	android:layout_marginTop="40dp"
-        android:text="Sign Up" />
-
-    <Button
-        android:id="@+id/browse_button"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-    	android:layout_marginRight="50dp"
-    	android:layout_marginTop="20dp"
-        android:text="Browse" />
+	    <TextView
+	        android:id="@+id/username_view"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	    	android:layout_marginTop="30dp"
+	        android:text="Username:" />
+	
+	    <EditText
+	        android:id="@+id/username_edit"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_below="@id/username_view"
+	        android:ems="10" />
+	        
+	    <TextView
+	        android:id="@+id/password_view"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	    	android:layout_marginTop="20dp"
+	    	android:layout_below="@id/username_edit"
+	        android:text="Password:" />
+	
+	    <EditText
+	        android:id="@+id/password_edit"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	    	android:inputType="textPassword"
+	    	android:layout_below="@id/password_view"
+	        android:ems="10" />
+	
+	    <Button
+	        android:id="@+id/login_button"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	    	android:layout_marginTop="10dp"
+	    	android:layout_below="@id/password_edit"
+	        android:text="Login" />
+	
+	    <Button
+	        android:id="@+id/sign_up_button"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	    	android:layout_marginTop="40dp"
+	    	android:layout_below="@id/login_button"
+	        android:text="Sign Up" />
+	
+	    <Button
+	        android:id="@+id/browse_button"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	    	android:layout_marginTop="20dp"
+	    	android:layout_below="@id/sign_up_button"
+	        android:text="Browse" />
+	
+	    
+    </RelativeLayout>
 
 </LinearLayout>
