--- a/cse190_listApp/res/layout/splash.xml
+++ b/cse190_listApp/res/layout/splash.xml
@@ -14,7 +14,7 @@
     </EditText>
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/dishpicture"
         android:layout_width="158dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.29"
