--- a/cse190_listApp/res/layout/first_launch.xml
+++ b/cse190_listApp/res/layout/first_launch.xml
@@ -13,7 +13,7 @@
     	android:layout_marginRight="15dp">
 
         <ImageView
-            android:id="@+id/imageView1"
+            android:id="@+id/dishpicture"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_launcher" />
