--- a/cse190_listApp/res/layout/dish_details.xml
+++ b/cse190_listApp/res/layout/dish_details.xml
@@ -37,20 +37,13 @@
         android:layout_below="@id/price"
         android:text="Calories" />
 
-    <TextView
-        android:id="@+id/rating_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@id/calories"
-        android:text="Rating:" />
-
     <RatingBar
         android:id="@+id/rating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/rating_text"
-        android:layout_toRightOf="@id/rating_text" 
+        android:layout_toRightOf="@id/rating_text"
+        style="?android:attr/ratingBarStyleSmall" 
         android:numStars="5"
         android:isIndicator="true" />
 
@@ -128,5 +121,13 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/reviews_text" >
     </ListView>
+
+    <TextView
+        android:id="@+id/rating_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/dish_name"
+        android:text="Avg. Rating:" />
     
 </RelativeLayout>
