Google API + some code for the Navigation Function

--- a/cse190_listApp/res/layout/singup.xml
+++ b/cse190_listApp/res/layout/singup.xml
@@ -132,7 +132,7 @@
              android:layout_width="100dp"
              android:layout_height="wrap_content"
              android:layout_centerHorizontal="true"
-             android:text="Update" />
+             android:text="Sign Up" />
      </RelativeLayout>
 
 </LinearLayout>
