--- a/cse190_listApp/res/layout/itemview.xml
+++ b/cse190_listApp/res/layout/itemview.xml
@@ -32,7 +32,7 @@
              />
 
         <TextView
-            android:id="@+id/restaurantname"
+            android:id="@+id/restaurantname3"
             android:layout_width="200dp"
             android:layout_height="40dp"
             android:text="restaurantname" />
