--- a/cse190_listApp/res/layout/activity_main.xml
+++ b/cse190_listApp/res/layout/activity_main.xml
@@ -14,4 +14,20 @@
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
 
+    <QuickContactBadge
+        android:id="@+id/quickContactBadge1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/hello_id"
+        android:layout_marginTop="31dp" />
+
+    <RatingBar
+        android:id="@+id/ratingBar1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/quickContactBadge1"
+        android:layout_marginTop="14dp" />
+
 </RelativeLayout>
