--- a/cse190_listApp/res/layout/mainpage.xml
+++ b/cse190_listApp/res/layout/mainpage.xml
@@ -40,7 +40,8 @@
  	<ListView
  	    android:id="@+id/dishlistview"
  	    android:layout_width="match_parent"
- 	    android:layout_height="wrap_content" >
+ 	    android:layout_height="wrap_content"
+ 	    android:clickable="true">
  	</ListView>
 
 </LinearLayout>
