--- a/cse190_listApp/res/layout/dish_details.xml
+++ b/cse190_listApp/res/layout/dish_details.xml
@@ -70,7 +70,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@id/dish_description"
-        android:text="Write Review" />
+        android:text="Write Review" 
+        android:onClick="writeReviewClick"/>
 
     <TextView
         android:id="@+id/restaurant_name"
@@ -112,7 +113,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/directions_button"
-        android:text="Menu" />
+        android:text="Menu" 
+        android:onClick="menuClick"/>
 
     <TextView
         android:id="@+id/reviews_text"
