--- a/cse190_listApp/res/layout/displayrestaurantmenu.xml
+++ b/cse190_listApp/res/layout/displayrestaurantmenu.xml
@@ -38,7 +38,8 @@
  	<ListView
  	    android:id="@+id/dishlistview2"
  	    android:layout_width="match_parent"
- 	    android:layout_height="wrap_content" >
+ 	    android:layout_height="wrap_content" 
+ 	    android:clickable="true">
  	</ListView>
 
 </LinearLayout>
