--- a/cse190_listApp/res/layout/editprofile.xml
+++ b/cse190_listApp/res/layout/editprofile.xml
@@ -132,7 +132,8 @@
              android:layout_width="100dp"
              android:layout_height="wrap_content"
              android:layout_centerHorizontal="true"
-             android:text="Update" />
+             android:text="Update" 
+             android:onClick="updateClick"/>
      </RelativeLayout>
 
 </LinearLayout>
