--- a/cse190_listApp/res/layout/write_review.xml
+++ b/cse190_listApp/res/layout/write_review.xml
@@ -78,7 +78,8 @@
 	       android:layout_height="wrap_content"
 	       android:layout_below="@id/user_review_text"
 	       android:layout_alignParentRight="true"
-	       android:text="Post" />
+	       android:text="Post" 
+	       android:onClick="postClick"/>
    
    </RelativeLayout>
 
