--- a/cse190_listApp/res/menu/main.xml
+++ b/cse190_listApp/res/menu/main.xml
@@ -5,5 +5,11 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
+    
+    <item android:id="@+id/action_edit_profile" 
+        android:visible="true" 
+        android:title="Edit Profile" >
+        
+    </item>
 
 </menu>
