--- a/cse190_listApp/res/layout/singup.xml
+++ b/cse190_listApp/res/layout/singup.xml
@@ -43,12 +43,13 @@
         android:layout_marginTop="30dp"
         />
 
-    <AutoCompleteTextView
-        android:id="@+id/password2"
+    <EditText
+        android:id="@+id/userNameInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:lines="1"
         android:ems="10" >
-    </AutoCompleteTextView>
+    </EditText>
 
     <TextView
         android:id="@+id/password_label2"
@@ -60,7 +61,7 @@
         android:textSize="14sp" />
 
     <EditText
-        android:id="@+id/password_tex2"
+        android:id="@+id/password1Input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -76,7 +77,7 @@
         android:textSize="14dp" />
 
     <EditText
-        android:id="@+id/password_tex2"
+        android:id="@+id/password2Input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
