--- a/cse190_listApp/res/layout/first_launch.xml
+++ b/cse190_listApp/res/layout/first_launch.xml
@@ -38,7 +38,7 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	    	android:layout_marginTop="30dp"
-	        android:text="Username:" />
+	        android:text="User Email:" />
 	
 	    <EditText
 	        android:id="@+id/username_edit"
