--- a/cse190_listApp/res/layout/restaurantinfo.xml
+++ b/cse190_listApp/res/layout/restaurantinfo.xml
@@ -1,81 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-
-	<RelativeLayout
-	    android:layout_width="match_parent"
-	    android:layout_height="208dp"
-	    android:orientation="vertical" >
-
-    <ImageButton
-        android:id="@+id/picture3"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentTop="true"
-        android:layout_weight="1.02"
-        android:maxHeight="200dp"
-        android:maxWidth="200dp"
-        android:src="@drawable/ic_launcher" />
-
-	</RelativeLayout>
-
+  android:layout_width="fill_parent"
+  android:layout_height="fill_parent"
+  android:orientation="vertical">
+  <TextView
+    android:id="@+id/line1"
+    style="@android:style/TextAppearance.Medium"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+  />
+  <TextView
+    android:id="@+id/line2"
+    style="@android:style/TextAppearance.Medium"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+  />
+  <TextView
+    android:id="@+id/line3"
+    style="@android:style/TextAppearance.Medium"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"/>
     <TextView
-        android:id="@+id/restaurantname3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Restaurant"
-        android:textSize="20sp" />
-
-    <TextView
-        android:id="@+id/hours3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hours"
-        android:textSize="20sp" />
-
-    <TextView
-        android:id="@+id/phone3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Phone Number"
-        android:textSize="20sp" />
-
-    <TextView
-        android:id="@+id/address3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Address"
-        android:textSize="20sp" />
-
-    <TextView
-        android:id="@+id/category3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Category"
-        android:textSize="20sp" />
-
-    <TextView
-        android:id="@+id/averageprice3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Average Price"
-        android:textSize="20sp" />
-
-    <TextView
-        android:id="@+id/date3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Date"
-        android:textSize="20sp" />
-
-    <TextView
-        android:id="@+id/url3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Restraunt Website"
-        android:textSize="20sp" />
-
+    android:id="@+id/line4"
+    style="@android:style/TextAppearance.Medium"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"/>
+      <TextView
+    android:id="@+id/line5"
+    style="@android:style/TextAppearance.Medium"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"/>
+        <TextView
+    android:id="@+id/line6"
+    style="@android:style/TextAppearance.Medium"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"/>
+          <TextView
+    android:id="@+id/line7"
+    style="@android:style/TextAppearance.Medium"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"/>
+            <TextView
+    android:id="@+id/line8"
+    style="@android:style/TextAppearance.Medium"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"/>
+ <TextView
+    android:id="@+id/line9"
+    style="@android:style/TextAppearance.Medium"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"/>
+  <TextView
+    android:id="@+id/line10"
+    style="@android:style/TextAppearance.Medium"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"/>   
+  <TextView
+    android:id="@+id/line10"
+    style="@android:style/TextAppearance.Medium"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"/> 
+    
+  <TextView
+    android:id="@+id/line11"
+    style="@android:style/TextAppearance.Medium"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"/> 
+  <TextView
+    android:id="@+id/line12"
+    style="@android:style/TextAppearance.Medium"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"/>   
+    
 </LinearLayout>
