--- a/cse190_listApp/res/layout/itemview.xml
+++ b/cse190_listApp/res/layout/itemview.xml
@@ -7,36 +7,68 @@
      
     <ImageView
         android:id="@+id/dishpicture"
-        android:layout_width="106dp"
-        android:layout_height="106dp"
+        android:layout_width="140dp"
+        android:layout_height="100dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:adjustViewBounds="true"
         android:fillViewport="true"
-        android:maxHeight="90dp"
-        android:maxWidth="90dp"
+        android:maxHeight="100dp"
+        android:maxWidth="140dp"
         android:src="@drawable/ic_launcher" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="85dp" 
-        android:orientation="vertical"
-        >
+        android:layout_height="119dp"
+        android:orientation="vertical" >
 
         <TextView
             android:id="@+id/dishname"
             android:layout_width="199dp"
-            android:layout_height="48dp"
-            android:text="DishName"
-            android:layout_marginTop="20dp"
-             />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="DishName" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/dishRating2"
+                android:layout_width="199dp"
+                android:layout_height="wrap_content"
+                android:text="Rating:" />
+
+            <RatingBar
+                android:id="@+id/rating2"
+                style="?android:attr/ratingBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:isIndicator="true"
+                android:numStars="5" />
+
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/dishCalories2"
+            android:layout_width="199dp"
+            android:layout_height="wrap_content"
+            android:text="DishCalories" />
+        
+        <TextView
+            android:id="@+id/dishPrice1"
+            android:layout_width="199dp"
+            android:layout_height="wrap_content"
+            android:text="DishPrice: " />
 
         <TextView
             android:id="@+id/restaurantname3"
             android:layout_width="200dp"
-            android:layout_height="40dp"
-            android:text="restaurantname" />
-        
+            android:layout_height="wrap_content"
+            android:text="RestaurantName" />
     </LinearLayout>
 
 </LinearLayout>
