--- a/cse190_listApp/res/layout/mainpage.xml
+++ b/cse190_listApp/res/layout/mainpage.xml
@@ -4,9 +4,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+	<LinearLayout 
+    android:layout_width="match_parent"
+    android:layout_height="50dp"
+    android:orientation="horizontal" >
     <AutoCompleteTextView
         android:id="@+id/autoCompleteTextView1"
-        android:layout_width="match_parent"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:ems="10"
         android:text="Search" >
@@ -16,24 +20,25 @@
             android:layout_height="wrap_content" />
 
     </AutoCompleteTextView>
-
-	<RelativeLayout 
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content">
-    	<Button
+    <Button
 	        android:id="@+id/button1"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:text="Search" 
-	        android:layout_alignParentRight="true"
 	        />
+    </LinearLayout>
+
+	<RelativeLayout 
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content">
+    	
  	</RelativeLayout>
  	<RelativeLayout 
  	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content">
  	  <View
 		    android:layout_width="fill_parent"
-        	android:layout_height="1px"
+        	android:layout_height="1dp"
         	android:background="#FF909090" />
  	</RelativeLayout>
 
