--- a/cse190_listApp/res/layout/restaurantinfo.xml
+++ b/cse190_listApp/res/layout/restaurantinfo.xml
@@ -1,75 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="fill_parent"
-  android:layout_height="fill_parent"
-  android:orientation="vertical">
-  <TextView
-    android:id="@+id/line1"
-    style="@android:style/TextAppearance.Medium"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-  />
-  <TextView
-    android:id="@+id/line2"
-    style="@android:style/TextAppearance.Medium"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-  />
-  <TextView
-    android:id="@+id/line3"
-    style="@android:style/TextAppearance.Medium"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"/>
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
+
+    <WebView
+        android:id="@+id/restaurantpicture"
+        android:layout_width="match_parent"
+        android:layout_height="176dp"
+        android:layout_weight="0.96"
+        android:src="@drawable/ic_launcher" />
+
     <TextView
-    android:id="@+id/line4"
-    style="@android:style/TextAppearance.Medium"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"/>
-      <TextView
-    android:id="@+id/line5"
-    style="@android:style/TextAppearance.Medium"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"/>
-        <TextView
-    android:id="@+id/line6"
-    style="@android:style/TextAppearance.Medium"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"/>
-          <TextView
-    android:id="@+id/line7"
-    style="@android:style/TextAppearance.Medium"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"/>
-            <TextView
-    android:id="@+id/line8"
-    style="@android:style/TextAppearance.Medium"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"/>
- <TextView
-    android:id="@+id/line9"
-    style="@android:style/TextAppearance.Medium"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"/>
-  <TextView
-    android:id="@+id/line10"
-    style="@android:style/TextAppearance.Medium"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"/>   
-  <TextView
-    android:id="@+id/line10"
-    style="@android:style/TextAppearance.Medium"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"/> 
-    
-  <TextView
-    android:id="@+id/line11"
-    style="@android:style/TextAppearance.Medium"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"/> 
-  <TextView
-    android:id="@+id/line12"
-    style="@android:style/TextAppearance.Medium"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"/>   
-    
+        android:id="@+id/line1"
+        style="@android:style/TextAppearance.Medium"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="LINE1" />
+
+    <TextView
+        android:id="@+id/line2"
+        style="@android:style/TextAppearance.Medium"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/line3"
+        style="@android:style/TextAppearance.Medium"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/line4"
+        style="@android:style/TextAppearance.Medium"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/line5"
+        style="@android:style/TextAppearance.Medium"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/line6"
+        style="@android:style/TextAppearance.Medium"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/line7"
+        style="@android:style/TextAppearance.Medium"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/line8"
+        style="@android:style/TextAppearance.Medium"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/line9"
+        style="@android:style/TextAppearance.Medium"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/line10"
+        style="@android:style/TextAppearance.Medium"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/line10"
+        style="@android:style/TextAppearance.Medium"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/line11"
+        style="@android:style/TextAppearance.Medium"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/line12"
+        style="@android:style/TextAppearance.Medium"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
