--- a/cse190_listApp/res/layout/displayrestaurantmenu.xml
+++ b/cse190_listApp/res/layout/displayrestaurantmenu.xml
@@ -4,41 +4,48 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+	<LinearLayout 
+    android:layout_width="match_parent"
+    android:layout_height="50dp"
+    android:orientation="horizontal" >
     <AutoCompleteTextView
-        android:id="@+id/autoCompleteTextView1"
-        android:layout_width="match_parent"
+        android:id="@+id/autoCompleteTextView6"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:ems="10"
         android:text="Search" >
 
-   
+        <requestFocus
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
     </AutoCompleteTextView>
+    <Button
+	        android:id="@+id/restaurantinfo_x6"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="Search" 
+	        />
+    </LinearLayout>
 
 	<RelativeLayout 
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content">
-    	<Button
-	        android:id="@+id/button1"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:text="Search" 
-	        android:layout_alignParentRight="true"
-	        />
+    	
  	</RelativeLayout>
  	<RelativeLayout 
  	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content">
  	  <View
 		    android:layout_width="fill_parent"
-        	android:layout_height="1px"
+        	android:layout_height="1dp"
         	android:background="#FF909090" />
  	</RelativeLayout>
 
  	<ListView
- 	    android:id="@+id/dishlistview2"
+ 	    android:id="@+id/dishlistview6"
  	    android:layout_width="match_parent"
- 	    android:layout_height="wrap_content" 
+ 	    android:layout_height="wrap_content"
  	    android:clickable="true">
  	</ListView>
 
