--- a/cse190_listApp/res/layout/first_launch.xml
+++ b/cse190_listApp/res/layout/first_launch.xml
@@ -44,6 +44,7 @@
 	        android:id="@+id/username_edit"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
+	        android:singleLine="true" 
 	        android:layout_below="@id/username_view"
 	        android:ems="10" />
 	        
