--- a/cse190_listApp/res/layout/singup.xml
+++ b/cse190_listApp/res/layout/singup.xml
@@ -48,6 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:lines="1"
+        android:singleLine="true" 
         android:ems="10" >
     </EditText>
 
