Reworked dataaccess on dishListView page. Reduced data access requests to 1 request vs 3. Also made the results show no results if a search turns up empty.

--- a/cse190_listApp/res/layout/mainpage.xml
+++ b/cse190_listApp/res/layout/mainpage.xml
@@ -56,5 +56,9 @@
  	    android:layout_height="wrap_content"
  	    android:clickable="true">
  	</ListView>
+ 	<TextView android:id="@+id/emptyElement"
+    		android:layout_width="match_parent"
+    		android:layout_height="match_parent"
+    		android:text="No Results"  />
 
 </LinearLayout>
