Call and directions buttons working

--- a/cse190_listApp/res/layout/dish_details.xml
+++ b/cse190_listApp/res/layout/dish_details.xml
@@ -88,7 +88,8 @@
         android:layout_alignBaseline="@+id/restaurant_name"
         android:layout_alignBottom="@+id/restaurant_name"
         android:layout_alignParentRight="true"
-        android:text="Call" />
+        android:text="Call" 
+        android:onClick="callClick"/>
 
     <TextView
         android:id="@+id/restaurant_address"
@@ -105,7 +106,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/call_button"
-        android:text="Directions" />
+        android:text="Directions" 
+        android:onClick="directionsClick"/>
 
     <Button
         android:id="@+id/menu_button"
