--- a/cse190_listApp/res/layout/splash.xml
+++ b/cse190_listApp/res/layout/splash.xml
@@ -4,20 +4,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <EditText
-        android:id="@+id/editText1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10" >
-
-        <requestFocus />
-    </EditText>
-
     <ImageView
         android:id="@+id/dishpicture"
-        android:layout_width="158dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.29"
-        android:src="@drawable/ic_launcher" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/splash" />
 
 </LinearLayout>
