--- a/cse190_listApp/res/layout/singup.xml
+++ b/cse190_listApp/res/layout/singup.xml
@@ -2,125 +2,101 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <ImageView
-            android:id="@+id/dishpicture2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.21"
-            android:src="@drawable/ic_launcher" />
-
-        <TextView
-            android:id="@+id/findmycraving2"
-            android:layout_width="203dp"
-            android:layout_height="41dp"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:layout_margin="15dp"
-            android:layout_marginRight="18dp"
-            android:layout_toRightOf="@+id/dishpicture"
-            android:layout_weight="0.55"
-            android:ems="10"
-            android:text="Find My graving"
-            android:textSize="15sp" />
-
-    </RelativeLayout>
-
-    <TextView
-        android:id="@+id/username_label2"
-        android:layout_width="100dp"
-        android:layout_height="30dp"
-        android:layout_margin="5dp"
-        android:ems="10"
-        android:text="Username"
-        android:textSize="15dp" 
-        android:layout_marginTop="30dp"
-        />
-
-    <EditText
-        android:id="@+id/userNameInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:lines="1"
-        android:singleLine="true" 
-        android:ems="10" >
-    </EditText>
-
-    <TextView
-        android:id="@+id/password_label2"
-        android:layout_width="100dp"
-        android:layout_height="30dp"
-        android:layout_margin="5dp"
-        android:ems="10"
-        android:text="Password"
-        android:textSize="14sp" />
-
-    <EditText
-        android:id="@+id/password1Input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPassword" />
-
-    <TextView
-        android:id="@+id/retypepass_labe2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:ems="10"
-        android:text="Re-Type Password"
-        android:textSize="14dp" />
-
-    <EditText
-        android:id="@+id/password2Input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPassword" >
-
-        <requestFocus />
-    </EditText>
-
-    <TextView
-        android:id="@+id/email_label2"
-        android:layout_width="100dp"
-        android:layout_height="30dp"
-        android:layout_margin="5dp"
-        android:ems="10"
-        android:text="Email"
-        android:textSize="14sp" />
-
-    <EditText
-        android:id="@+id/email2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textEmailAddress" />
-
-     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-    </RelativeLayout>
-
-     <RelativeLayout
-         android:layout_width="fill_parent"
-         android:layout_height="wrap_content" >
-
-         <Button
-             android:id="@+id/Update_btn"
-             android:layout_width="100dp"
-             android:layout_height="wrap_content"
-             android:layout_centerHorizontal="true"
-             android:onClick="signUpClick"
-             android:text="Sign Up" />
-     </RelativeLayout>
-
+    android:orientation="vertical"
+    android:background="@drawable/explode_bkg" >
+	
+	<LinearLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:layout_marginTop="40dp"
+	    android:layout_marginLeft="40dp"
+	    android:layout_marginRight="40dp"
+	    android:orientation="vertical" >
+	    <TextView
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="User Signup"
+	        android:textStyle="bold"
+	        android:textColor="#ab2224"
+	        android:textSize="24sp" />
+	    <TextView 
+	      	android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginTop="5dp"
+	        android:text="You can write your own reviews of dishes by creating an account"
+	        android:layout_marginBottom="20dp"
+	        android:textColor="#ab2224"
+	        android:textSize="12sp" />
+	
+	    <EditText
+	        android:id="@+id/userNameInput"
+	        android:layout_width="match_parent"
+	        android:layout_height="40dp"
+	        android:layout_marginBottom="20dp"
+	        android:paddingLeft="10dp"
+	        android:paddingRight="10dp"
+	        android:lines="1"
+	        android:singleLine="true" 
+	        android:ems="10" 
+	        android:hint="User Name"
+	        android:background="@drawable/rectangleborder"
+	        />
+	      
+	
+	    <EditText
+	        android:id="@+id/password1Input"
+	        android:layout_width="match_parent"
+	        android:layout_height="40dp"
+	        android:layout_marginBottom="20dp"
+	        android:paddingLeft="10dp"
+	        android:paddingRight="10dp"
+	        android:ems="10"
+	        android:hint="Password"
+	        android:inputType="textPassword" 
+	        android:background="@drawable/rectangleborder"
+	        />
+	
+	    <EditText
+	        android:id="@+id/password2Input"
+	        android:layout_width="match_parent"
+	        android:layout_height="40dp"
+	        android:layout_marginBottom="20dp"
+	        android:paddingLeft="10dp"
+	        android:paddingRight="10dp"
+	        android:hint="Re-type Password"
+	        android:ems="10"
+	        android:inputType="textPassword"
+	        android:background="@drawable/rectangleborder"
+	        />
+	
+	    <EditText
+	        android:id="@+id/email2"
+	        android:layout_width="match_parent"
+	        android:layout_height="40dp"
+	        android:layout_marginBottom="20dp"
+	        android:paddingLeft="10dp"
+	        android:paddingRight="10dp"
+	        android:ems="10"
+	        android:hint="User Email"
+	        android:inputType="textEmailAddress" 
+	        android:background="@drawable/rectangleborder"
+	        />
+	    
+	
+	     <RelativeLayout
+	         android:layout_width="fill_parent"
+	         android:layout_height="wrap_content" >
+	
+	         <Button
+	             android:id="@+id/Update_btn"
+	             android:layout_width="100dp"
+	             android:layout_height="wrap_content"
+	             android:layout_centerHorizontal="true"
+	             android:onClick="signUpClick"
+	             android:text="Sign Up" 
+	             android:textColor="#ffffff"
+	             android:background="@drawable/red_box"
+	             />
+	     </RelativeLayout>
+	</LinearLayout>
 </LinearLayout>
