--- a/cse190_listApp/res/layout/display_review.xml
+++ b/cse190_listApp/res/layout/display_review.xml
@@ -1,31 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/user_profile_pic"
+    
+    <LinearLayout
+        android:id="@+id/user_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_alignParentTop="true"
-        android:src="@drawable/ic_launcher" />
-
-    <TextView
-        android:id="@+id/username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@id/user_profile_pic"
-        android:text="Username" />
+        android:orientation="vertical" >
+        
+	    <ImageView
+	        android:id="@+id/user_profile_pic"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginTop="5dp"
+	        android:src="@drawable/review_placeholder" 
+	        android:layout_gravity="center_horizontal"/>"
+	    
+	
+	    <TextView
+	        android:id="@+id/username"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_gravity="center_horizontal"
+	        android:text="Username" />
+	    
+        </LinearLayout>
 
     <RatingBar
         android:id="@+id/rating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_marginTop="5dp"
         style="?android:attr/ratingBarStyleSmall"
-        android:layout_toRightOf="@id/username" 
+        android:layout_toRightOf="@id/user_info" 
         android:numStars="5"
         android:isIndicator="true"/>
 
@@ -33,7 +45,7 @@
         android:id="@+id/date_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_marginTop="5dp"
         android:layout_marginLeft="7dp"
         android:layout_toRightOf="@id/rating"
         android:text="Date Written" />
@@ -43,7 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/rating"
-        android:layout_toRightOf="@id/username"
+        android:layout_toRightOf="@id/user_info"
         android:text="Rating Text" 
         android:minLines="2"/>
 
